tests/snapshots/snapshot_sdk_types__ir_content_block_tool_result.snap
---
source: tests/snapshot_sdk_types.rs
expression: block
---
{
  "type": "tool_result",
  "tool_use_id": "tu_001",
  "content": [
    {
      "type": "text",
      "text": "fn main() {}"
    }
  ],
  "is_error": false
}
