tests/snapshots/snapshot_sdk_types__ir_content_block_tool_use.snap
---
source: tests/snapshot_sdk_types.rs
expression: block
---
{
  "type": "tool_use",
  "id": "tu_001",
  "name": "read_file",
  "input": {
    "path": "src/main.rs"
  }
}
