tests/snapshots/snapshot_sdk_types__ir_tool_definition.snap
---
source: tests/snapshot_sdk_types.rs
expression: tool
---
{
  "name": "write_file",
  "description": "Write content to a file at the given path.",
  "parameters": {
    "properties": {
      "content": {
        "type": "string"
      },
      "path": {
        "type": "string"
      }
    },
    "required": [
      "path",
      "content"
    ],
    "type": "object"
  }
}
