tests/snapshots/snapshot_sdk_types__openai_response_format_json_schema.snap
---
source: tests/snapshot_sdk_types.rs
expression: json_schema
---
{
  "type": "json_schema",
  "json_schema": {
    "name": "my_schema",
    "description": "A test schema",
    "schema": {
      "properties": {
        "name": {
          "type": "string"
        }
      },
      "required": [
        "name"
      ],
      "type": "object"
    },
    "strict": true
  }
}
