tests/snapshots/snapshot_sdk_types__openai_streaming_chunk.snap
---
source: tests/snapshot_sdk_types.rs
expression: chunk
---
{
  "id": "chatcmpl-fixed-001",
  "object": "chat.completion.chunk",
  "created": 1700000000,
  "model": "gpt-4",
  "choices": [
    {
      "index": 0,
      "delta": {
        "role": "assistant",
        "content": "Hello, "
      },
      "finish_reason": null
    }
  ]
}
